update season info

--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -41,10 +41,10 @@
                     <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-c' %}">Группа C</a>
                     <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-d' %}">Группа D</a>
 
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/282/reglament">Регламент</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/326/326">Регламент</a>
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/281/281">Переносы</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/280/280">Трансферы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/327/327">Переносы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/324/transfer">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Стол заявок</a>
 
