update season info

--- a/haxball_site/templates/tournament/hall_of_fame.html
+++ b/haxball_site/templates/tournament/hall_of_fame.html
@@ -1,5 +1,6 @@
 {% extends "core/home.html" %}
 {% load static %}
+{% load cache %}
 {% load tournament_extras %}
 {% block title %}Чемпионат | Зал славы          cis-haxball.com {% endblock %}
 {% block profile_of_user %}
