add pl-off link

--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -40,7 +40,7 @@
                     <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-b' %}">Группа B</a>
                     <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-c' %}">Группа C</a>
                     <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-d' %}">Группа D</a>
-
+                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-play-off' %}">Плей-офф</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/326/326">Регламент</a>
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/327/327">Переносы</a>
