--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -60,6 +60,9 @@
                 </div>
             </li>
             <li class="nav-item">
+                <a class="nav-link font-weight-bold mx-1 text-right text-danger" href="https://www.cis-haxball.com/post/394/394">Регистрация</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
             <li class="nav-item">
