--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,11 +36,7 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-a' %}">Группа А</a>
-                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-b' %}">Группа B</a>
-                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-c' %}">Группа C</a>
-                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-d' %}">Группа D</a>
-                    <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-play-off' %}">Плей-офф</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая лига</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/326/326">Регламент</a>
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/327/327">Переносы</a>
@@ -60,7 +56,8 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold mx-1 text-right text-danger" href="https://www.cis-haxball.com/post/394/394">Регистрация</a>
+                <a class="nav-link font-weight-bold mx-1 text-right text-danger"
+                   href="https://www.cis-haxball.com/post/394/394">Регистрация</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
@@ -110,6 +107,15 @@
                         <a class="dropdown-item" href="{% url 'tournament:league' 's7-first_division' %}">Первая
                             лига</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's7-cup' %}">Кубок России</a>
+                    </div>
+
+                    <a class="dropdown-item submenu" href="#">ЛЧ #3</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-a' %}">Группа А</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-b' %}">Группа B</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-c' %}">Группа C</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-d' %}">Группа D</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-play-off' %}">Плей-офф</a>
                     </div>
 
                 </div>
