--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -10,12 +10,24 @@
 
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "tournament/free_agent/free_agent_list.css" %}">
+
     <style>
         body {
             background-image: url({% static "img/backgrounds/bg-new-green.jpg" %})
         }
     </style>
 
+{% endblock %}
+
+
+{% block scripts %}
+    <script>
+        function myFunction(Element) {
+            navigator.clipboard.writeText(Element.title);
+            alert("Скопирован адрес! " + Element.title);
+        }
+    </script>
 {% endblock %}
 
 
@@ -29,13 +41,30 @@
                 {% block sidebar_users %}
                     {% show_users_online 12 %}
                 {% endblock %}
+
+                <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
+                    <div class="card-header text-center">
+                        <h5>Teamspeak3-сервер</h5>
+                    </div>
+                    <div class="card-body d-flex justify-content-around">
+                        <div class="d-inline-flex">
+                            <img src='{% static "img/ico/ts_logo.png" %}'
+                                 onclick="myFunction(this)"
+                                 title="haxball.ts3.ru"
+                                 style="cursor: pointer;" width="100%">
+                        </div>
+                        <div class="d-inline-flex">
+                            <a href="ts3server://haxball.ts3.ru"><img src='{% static "img/ico/ts_logo.png" %}'
+                                    title="haxball.ts3.ru"
+                                    style="cursor: pointer;" width="100%">
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
                 {% polls_list 2 user %}
 
-                 <div class="card mt-2 mb-1">
-                     <a class="btn btn-secondary px-1" href="https://vk.me/join/72t04i5E6zNDZHTxUCNDl3u9EC4XYcmjAEc=">
-                         <img src="{% static 'img/ico/vk_1.png' %}"><span class="text-success font-weight-bold align-middle" style="font-size: 13.5pt;">Вступить в беседу</span>
-                     </a>
-                </div>
 
                 <div class="card mb-1 mr-0 mt-2 text-right">
                     <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=%D0%92%D0%B7%D0%BD%D0%BE%D1%81%20%D0%BE%D1%82%20%22%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B%22&default-sum=300&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410011043451485"
@@ -129,7 +158,13 @@
                     <!-- VK Widget -->
                     <div id="vk_groups"></div>
                     <script type="text/javascript">
-                        VK.Widgets.Group("vk_groups", {mode: 3, width: "auto", color1: '3C3C3C', color2: 'FFFFFF', color3: '0B7CFD'}, 147630853);
+                        VK.Widgets.Group("vk_groups", {
+                            mode: 3,
+                            width: "auto",
+                            color1: '3C3C3C',
+                            color2: 'FFFFFF',
+                            color3: '0B7CFD'
+                        }, 147630853);
                     </script>
                 </div>
 
@@ -140,5 +175,4 @@
 
 
 {% endblock %}
-
 
