--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -37,10 +37,14 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая лига</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/326/326">Регламент</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Дивизион Акул</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Дивизион Беркутов</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_wolves' %}">Дивизион Волков</a>
+
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-8">Регламент</a>
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/327/327">Переносы</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/324/transfer">Трансферы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/396/postpone">Переносы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/399/transfer">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Стол заявок</a>
 
