--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -32,16 +32,13 @@
                 {% endblock %}
 
 
-                <div class="card" style="border-radius: 20px 20px 20px 20px;">
+                <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
                     <div class="card-header d-inline-flex mb-0 justify-content-center bg-for-online-head"
                          style="border-radius: 20px 20px 0px 0">
                         <h5>Сервер TeamSpeak 3</h5>
                     </div>
                     <div class="card-body p-0 bg-for-online-body"
-                         style="position: relative; overflow: auto; border-radius: 0px 0px 20px 20px">
-                        <div>
-                            <h6>haxball.ts3.ru</h6>
-                        </div>
+                         style="position: relative; border-radius: 0px 0px 20px 20px">
                         <div style="width:  inherit; padding: 5%">
                             <div class="d-inline-flex">
                                 <a href="ts3server://haxball.ts3.ru">
