update home.html update navbar.html

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -37,20 +37,20 @@
                          style="border-radius: 20px 20px 0px 0">
                         <h5>Сервер TeamSpeak 3</h5>
                     </div>
-                    <div class="card-body p-0 bg-for-online-body"
-                         style="position: relative; border-radius: 0px 0px 20px 20px">
-                        <div style="width:  inherit; padding: 5%">
-                            <div class="d-inline-flex">
-                                <a href="ts3server://haxball.ts3.ru">
-                                    <img src='{% static "img/ico/ts_logo.png" %}' title="haxball.ts3.ru"
-                                         style="cursor: pointer; margin: 0% 5%" width="100%">
-                                </a>
-                            </div>
-                            <div class="d-inline-flex">
-                                <img src='{% static "img/ico/ts_logo.png" %}' onclick="navigator.clipboard.writeText('haxball.ts3.ru'); alert('Скопирован адрес сервера! haxball.ts3.ru');"
-                                     title="haxball.ts3.ru" style="cursor: pointer; margin: 0% 5%" width="100%">
-                            </div>
+                    <div class="card-body d-flex p-0 bg-for-online-body"
+                         style="position: relative; border-radius: 0px 0px 20px 20px; width:  inherit; padding: 5%">
+                        <div class="d-inline-flex m-3">
+                            <a href="ts3server://haxball.ts3.ru">
+                                <img src='{% static "img/ico/ts_logo.png" %}' title="haxball.ts3.ru"
+                                     style="cursor: pointer; margin: 0% 5%" width="100%">
+                            </a>
                         </div>
+                        <div class="d-inline-flex m-3">
+                            <img src='{% static "img/ico/ts_logo.png" %}'
+                                 onclick="navigator.clipboard.writeText('haxball.ts3.ru'); alert('Скопирован адрес сервера! haxball.ts3.ru');"
+                                 title="haxball.ts3.ru" style="cursor: pointer; margin: 0% 5%" width="100%">
+                        </div>
+
                     </div>
                 </div>
 
