--- a/haxball_site/templates/core/include/teams_in_navbar.html
+++ b/haxball_site/templates/core/include/teams_in_navbar.html
@@ -1,6 +1,6 @@
 {% load thumbnail %}
 
-<div class="row justify-content-center">
+<div class="row justify-content-start">
     {% for l in leagues %}
         <div class="col-12 text-center pb-1">
             <a href="{{ l.get_absolute_url }}" class="h5 py-1">{{ l }}</a>
