update home.html add teamspeak-block

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -132,12 +132,12 @@
                         <div class="d-flex">
                             <div class="d-inline-flex mb-2">
                                 <a href="ts3server://haxball.ts3.ru" class="m-0 p-0">
-                                    <img src='{% static "img/ico/button-link.png" %}' title="haxball.ts3.ru"
+                                    <img src='{% static "img/ico/button-link.PNG" %}' title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2">
-                                <img src='{% static "img/ico/button-copy.png" %}'
+                                <img src='{% static "img/ico/button-copy.PNG" %}'
                                      onclick="navigator.clipboard.writeText('haxball.ts3.ru'); alert('Скопирован адрес сервера! haxball.ts3.ru');"
                                      title="haxball.ts3.ru" style="cursor: pointer;" width="100%">
                             </div>
