update home.html add teamspeak-block

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -130,13 +130,13 @@
                          style="position: relative; border-radius: 0px 0px 20px 20px; width:  inherit; padding: 5%">
                         <h5 class="card-title mb-3 mt-1 text-center text-white">haxball.ts3.ru</h5>
                         <div class="d-flex">
-                            <div class="d-inline-flex mb-2">
+                            <div class="d-inline-flex mb-2" style="margin-left: 2px; margin-right: 1px;">
                                 <a href="ts3server://haxball.ts3.ru" class="m-0 p-0">
                                     <img src='{% static "img/ico/button-link.PNG" %}' title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
-                            <div class="d-inline-flex mb-2">
+                            <div class="d-inline-flex mb-2" style="margin-right: 2px">
                                 <img src='{% static "img/ico/button-copy.PNG" %}'
                                      onclick="navigator.clipboard.writeText('haxball.ts3.ru'); alert('Скопирован адрес сервера! haxball.ts3.ru');"
                                      title="haxball.ts3.ru" style="cursor: pointer;" width="100%">
