--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -120,12 +120,13 @@
                             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                 </div>
 
-                <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
+                <!--
+
+                                <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
                     <div class="card-header d-inline-flex mb-0 justify-content-center bg-for-online-head"
                          style="border-radius: 20px 20px 0px 0">
                         <h5>Сервер TeamSpeak 3</h5>
                     </div>
-
                     <div class="card-body p-0 bg-for-online-body"
                          style="position: relative; border-radius: 0px 0px 20px 20px; width:  inherit; padding: 5%">
                         <h5 class="card-title mb-3 mt-1 text-center text-white">haxball.ts3.ru</h5>
@@ -145,7 +146,31 @@
                     </div>
                 </div>
 
+                -->
+                <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
+                    <div class="card-header mb-0 p-1 justify-content-center bg-for-online-head"
+                         style="border-radius: 20px 20px 0px 0">
+                        <h6 style="margin-left: 10%">Сервер TeamSpeak 3:</h6>
+                        <h6 style="margin-left: 10%; text-decoration: underline">haxball.ts3.ru</h6>
+                    </div>
 
+                    <div class="card-body p-0 bg-for-online-body"
+                         style="position: relative; border-radius: 0px 0px 20px 20px; width: inherit; padding: 5%">
+                        <div class="d-flex">
+                            <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
+                                <a href="ts3server://haxball.ts3.ru" class="m-0 p-0">
+                                    <img src="/static/img/ico/button-link.PNG" title="haxball.ts3.ru"
+                                         style="cursor: pointer;" width="100%">
+                                </a>
+                            </div>
+                            <div class="d-inline-flex mb-2" style="margin: 3% 2px 0 0">
+                                <img src="/static/img/ico/button-copy.PNG"
+                                     onclick="navigator.clipboard.writeText('haxball.ts3.ru'); alert('Скопирован адрес сервера! haxball.ts3.ru');"
+                                     title="haxball.ts3.ru" style="cursor: pointer;" width="100%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
