update home.html add teamspeak-block

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -148,9 +148,9 @@
 
                 -->
                 <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
-                    <div class="card-header mb-0 p-1 justify-content-center bg-for-online-head"
+                    <div class="card-header mb-0 py-1 justify-content-center bg-for-online-head"
                          style="border-radius: 20px 20px 0px 0">
-                        <h6 style="margin-left: 10%">Сервер TeamSpeak 3:</h6>
+                        <h5 style="margin-left: 10%">Сервер TeamSpeak 3:</h5>
                         <h6 style="margin-left: 10%; text-decoration: underline">haxball.ts3.ru</h6>
                     </div>
 
