--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -61,7 +61,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right text-danger"
-                   href="https://www.cis-haxball.com/post/394/394">Регистрация</a>
+                   href="https://www.cis-haxball.com/post/403/rereg">Регистрация</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
