--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -74,7 +74,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right text-success"
-                   href="{% url 'core:guides' %}">Гайды</a>
+                   href="https://www.cis-haxball.com/forum/guides">Гайды</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link font-weight-bold mx-1 text-right" href="{% url 'core:tournaments' %}">Турниры</a>
