--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -37,6 +37,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-cup' %}">Кубок России</a>
                     <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Дивизион Акул</a>
                     <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Дивизион
                         Беркутов</a>
