update navbar.html fix reservation

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -13,7 +13,7 @@
 
     <style>
         body {
-            background-image: url({% static "img/backgrounds/bg-new-green.jpg" %})
+            background-image: url({% static "img/backgrounds/f-85.jpg" %})
         }
     </style>
 
@@ -24,7 +24,7 @@
 
 
     <div class="container-fluid justify-content-center"
-         style="background-image:url({% static "img/backgrounds/bg-new-green.jpg" %})">
+         style="background-image:url({% static "img/backgrounds/f-85.jpg" %})">
         <div class="row" style="max-width: 1600px; position: relative; margin: 0 auto;">
             <div class="col-2 col-xl-2 col-lg-3 col-sm-6 order-xl-1 order-lg-2 order-md-3 order-sm-3 my-2">
                 {% block sidebar_users %}
