--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -56,6 +56,8 @@
                     </div>
 
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-8">Регламент</a>
+                    <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1ePD6PJEtF9ZPuXv917uoN6C-MRo2v5Ny3R6mq5hZiLk/edit#gid=0">Календарик</a>
+
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/396/postpone">Переносы</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/399/transfer">Трансферы</a>
