--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "core/include/navbar.css" %}">
 {% endblock %}
 <nav class="navbar navbar-light navbar_color nav-fill"
-     style="background-image:url({% static "img/backgrounds/back_niqo3.png" %}); height: 100px; background-position: center; ">
+     style="background-image:url({% static "img/backgrounds/banner-animu.PNG" %}); height: 100px; background-position: center; ">
 
 
     <form class="form-inline" method="get" action="{% url 'core:filter' %}">
