--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -49,6 +49,9 @@
 
                     <a class="dropdown-item submenu" href="#">Кубок Лиги</a>
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Кубок
+                            Лиги
+                            группа А</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-A' %}">Кубок Лиги
                             группа А</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-B' %}">Кубок Лиги
