--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -29,9 +29,9 @@
 
 
                 <div class="card mb-1 mr-0 mt-2 text-right">
-                    <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=%D0%92%D0%B7%D0%BD%D0%BE%D1%81%20%D0%BE%D1%82%20%22%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B%22&default-sum=300&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410011043451485"
-                            width="100%" height="250" frameborder="0" allowtransparency="true"
-                            scrolling="no"></iframe>
+                    <iframe src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&default-sum=500&button-text=12&payment-type-choice=on&successURL=https%3A%2F%2Fwww.cis-haxball.com%2F&quickpay=shop&account=410011043451485&targets=%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%20%D0%BF%D0%BE%20%D0%BA%D0%BD%D0%BE%D0%BF%D0%BA%D0%B5&"
+                            width="423" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+                    <a href="https://sobe.ru/na/y2Z2Y1A0s1s0" class="alert-link">Или клик сюда</a>
                 </div>
 
             </div>
